--- a/kelas-public-speaking-surabaya-new/index.html
+++ b/kelas-public-speaking-surabaya-new/index.html
@@ -749,16 +749,16 @@
                   id="pills-tab" role="tablist">
                   <li class="nav-item d-inline-block">
                     <button type="button" class="nav-link px-3 rounded custom-price-button active" role="tab"
-                      data-target="first-class-jogja-content">
-                      Yogyakarta
+                      data-target="first-class-jakarta-content">
+                      Surabaya
                     </button>
                   </li>
-                  <li class="nav-item d-inline-block">
+                  <!-- <li class="nav-item d-inline-block">
                     <button type="button" class="nav-link px-3 rounded custom-price-button" id="action-class" role="tab"
                       data-target="first-class-jakarta-content">
-                      Jakarta, Tangsel atau Surabaya
+                      Surabaya
                     </button>
-                  </li>
+                  </li> -->
                 </ul>
               </div>
             </div>
@@ -851,7 +851,7 @@
                 </div>
               </div>
 
-              <!-- First Class : Jakarta, Tangsel atau Surabaya -->
+              <!-- First Class : Surabaya -->
               <div class="tab-pane custom-price-content fade" id="first-class-jakarta-content" role="tabpanel">
                 <div class="row g-0 align-items-center">
                   <div class="col-lg-6">
@@ -860,7 +860,7 @@
                         <span class="badge">Best Buy</span>
                       </div>
 
-                      <h5 class="fw-normal">First Class : Jakarta, Tangsel & Surabaya</h5>
+                      <h5 class="fw-normal">First Class : Surabaya</h5>
                       <h1 class="pricing-title mt-3 mb-0">IDR 2.579.000
                         <span class="f-13"> <strike>IDR 3.000.000</strike></span>
                       </h1>
@@ -891,10 +891,10 @@
                         </p>
                       </div>
                       <div class="mt-4 pt-2 text-center">
-                        <a data-program="First Class : Jakarta, Tangsel atau Surabaya"
+                        <a data-program="First Class : Surabaya"
                           class="btn btn-green w-100 title-change-registration"
                           onclick="sendWhatsAppMessage(this)">Daftar Sekarang</a>
-                        <a onclick="askAdminMessage(this)" data-program="First Class : Jakarta, Tangsel atau Surabaya"
+                        <a onclick="askAdminMessage(this)" data-program="First Class : Surabaya"
                           class="btn btn-primary w-100 title-change-consultation">Tanya
                           Admin</a>
                       </div>
@@ -903,7 +903,7 @@
 
                   <div class="col-lg-6">
                     <div class="pricing-box bg-white rounded mt-4">
-                      <h5 class="fw-normal">First Private : Jakarta, Tangsel & Surabaya</h5>
+                      <h5 class="fw-normal">First Private : Surabaya</h5>
                       <h1 class="pricing-title mt-3 mb-0">IDR 3.579.000
                         <span class="f-13"> <strike>IDR 5.000.000</strike></span>
                       </h1>
@@ -924,10 +924,10 @@
                         <p class="mb-3 f-16"><i class='bx bxs-check-circle'></i> Dapat <b>materi</b> setiap minggu</p>
                       </div>
                       <div class="mt-4 pt-2 text-center">
-                        <a data-program="First Private : Jakarta, Tangsel atau Surabaya"
+                        <a data-program="First Private : Surabaya"
                           class="btn btn-green w-100 title-change-registration"
                           onclick="sendWhatsAppMessage(this)">Daftar Sekarang</a>
-                        <a onclick="askAdminMessage(this)" data-program="First Private : Jakarta, Tangsel atau Surabaya"
+                        <a onclick="askAdminMessage(this)" data-program="First Private : Surabaya"
                           class="btn btn-primary w-100 title-change-consultation">Tanya
                           Admin</a>
                       </div>
@@ -1399,6 +1399,7 @@
   <!-- ======= End Footer & Counter Area ======= -->
 
   <div class="sosmed-container mt-4">
+    <div class="wa-chat-bubble">Hai kak aku mau tanya tanya nih 👋</div>
     <a href="https://wa.me/6285162992597" target="__blank" type="button" class="btn-sosmed btn-trigger-sosmed">
       <i class="bi bi-whatsapp bx-tada" id="icon-trigger"></i>
     </a>
