--- a/kelas-public-speaking-tangsel/index.html
+++ b/kelas-public-speaking-tangsel/index.html
@@ -1349,6 +1349,7 @@
   <!-- ======= End Footer & Counter Area ======= -->
 
   <div class="sosmed-container mt-4">
+    <div class="wa-chat-bubble">Hai kak aku mau tanya tanya nih 👋</div>
     <a href="https://wa.me/6285162992597" target="__blank" type="button" class="btn-sosmed btn-trigger-sosmed">
       <i class="bi bi-whatsapp bx-tada" id="icon-trigger"></i>
     </a>
