--- a/kelas-public-speaking-jakarta/index.html
+++ b/kelas-public-speaking-jakarta/index.html
@@ -1418,6 +1418,7 @@
   <footer-modal></footer-modal>
 
   <div class="sosmed-container mt-4">
+    <div class="wa-chat-bubble">Hai kak aku mau tanya tanya nih 👋</div>
     <a href="https://wa.me/6285162992597" target="__blank" type="button" class="btn-sosmed btn-trigger-sosmed">
       <i class="bi bi-whatsapp bx-tada" id="icon-trigger"></i>
     </a>
@@ -1552,8 +1553,8 @@
   <script src="assets/part/gallery-ipsum/script.js"></script>
   <script src="assets/part/modals/modal-component.js"></script>
   <script src="assets/part/smooth-slider/smooth-slider.js"></script>
-  < <script src="assets/part/custom-landing-page-jakarta/custom-landing-page-jakarta.js">
-    </script>
+  <script src="assets/part/custom-landing-page-jakarta/custom-landing-page-jakarta.js">
+  </script>
 
     <!-- Vendor JS Files -->
     <script src="assets/vendor/purecounter/purecounter_vanilla.js"></script>
