--- a/kelas-public-speaking-tangsel/index.html
+++ b/kelas-public-speaking-tangsel/index.html
@@ -696,16 +696,16 @@
                   id="pills-tab" role="tablist">
                   <li class="nav-item d-inline-block">
                     <button type="button" class="nav-link px-3 rounded custom-price-button active" role="tab"
-                      data-target="first-class-jogja-content">
-                      Yogyakarta
+                      data-target="first-class-jakarta-content">
+                      Tangsel
                     </button>
                   </li>
-                  <li class="nav-item d-inline-block">
+                  <!-- <li class="nav-item d-inline-block">
                     <button type="button" class="nav-link px-3 rounded custom-price-button" id="action-class" role="tab"
                       data-target="first-class-jakarta-content">
                       Jakarta, Tangsel atau Surabaya
                     </button>
-                  </li>
+                  </li> -->
                 </ul>
               </div>
             </div>
@@ -713,93 +713,15 @@
 
           <div class="col-lg-7 g-0 offset-lg-1" data-aos="fade-up">
             <div class="tab-content" id="pills-tabContent">
-              <!-- First Class : Yogyakarta -->
-              <div class="tab-pane custom-price-content fade active show" id="first-class-jogja-content"
+              <!-- First Class : Yogyakarta (hidden - not relevant for Tangsel page) -->
+              <!--
+              <div class="tab-pane custom-price-content fade" id="first-class-jogja-content"
                 role="tabpanel">
-                <div class="row g-0 align-items-center">
-                  <div class="col-lg-6">
-                    <div class="pricing-box active bg-white rounded mt-4">
-                      <div class="pricing-badge">
-                        <span class="badge">Best Buy</span>
-                      </div>
-
-                      <h5 class="fw-normal">First Class : Yogyakarta </h5>
-                      <h1 class="pricing-title mt-3 mb-0">IDR 1.979.000
-                        <span class="f-13"> <strike>IDR 3.000.000</strike></span>
-                      </h1>
-                      <p class="text-muted f-15 mt-3">Fokus pembelajaran: bisa bicara tanpa
-                        persiapan dan teratur
-                        didalam berbicara</p>
-                      <hr class="mt-4">
-                      <div class="mt-4 pt-1">
-                        <p class="mb-3 f-16"><i class='bx bxs-check-circle'></i> Garansi mengulang kelas</p>
-                        <p class="mb-3 f-16"><i class='bx bxs-check-circle'></i> <b>10x pertemuan:</b> 2 Bulan*</p>
-                        <p class="mb-3 f-16"><i class='bx bxs-check-circle'></i> Maksimal peserta <b>7 orang</b></p>
-                        <p class="mb-3 f-16"><i class='bx bxs-check-circle'></i> Minimal peserta <b>3 orang</b></p>
-                        <p class="mb-3 f-16"><i class='bx bxs-check-circle'></i> Durasi kelas <b>90 menit</b></p>
-                        <p class="mb-3 f-16"><i class='bx bxs-check-circle'></i> Dapat Certificate</p>
-                        <p class="mb-3 f-16"><i class='bx bxs-check-circle'></i> Bisa <b>DP dan Dicicil</b></p>
-                        <p class="mb-3 f-16"><i class='bx bxs-check-circle'></i> Gratis <b>webinar</b> setiap bulan</p>
-                        <p class="mb-3 f-16"><i class='bx bxs-check-circle'></i> E-book & E-module</p>
-                        <p class="mb-3 f-16"><i class='bx bxs-check-circle'></i> Komunitas alumni</p>
-                        <p class="mb-3 f-16"><i class='bx bxs-check-circle'></i> Jumlah peserta sedikit</p>
-                        <p class="mb-3 f-16"><i class='bx bxs-check-circle'></i> Evaluasi tiap sesi</p>
-                        <p class="mb-3 f-16"><i class='bx bxs-check-circle'></i> Ada WAG support</p>
-                        <p class="mb-3 f-16"><i class='bx bxs-check-circle'></i> Ada reminder kelas</p>
-                        <p class="mb-3 f-16"><i class='bx bxs-check-circle'></i> Dapat <b>materi</b> setiap minggu</p>
-
-                        <p class="mb-1 f-14" style="color:#888;">
-                          <i>Catatan: Harga bisa berubah. Tersedia juga kelas
-                            <b>PRIVATE</b>.</i>
-                        </p>
-                      </div>
-                      <div class="mt-4 pt-2 text-center">
-                        <a data-program="First Class : Yogyakarta" class="btn btn-green w-100 title-change-registration"
-                          onclick="sendWhatsAppMessage(this)">Daftar Sekarang</a>
-                        <a onclick="askAdminMessage(this)" data-program="First Class : Yogyakarta"
-                          class="btn btn-primary w-100 title-change-consultation">Tanya
-                          Admin</a>
-                      </div>
-                    </div>
-                  </div>
-
-                  <div class="col-lg-6">
-                    <div class="pricing-box bg-white rounded mt-4">
-                      <h5 class="fw-normal">First Private : Yogyakarta</h5>
-                      <h1 class="pricing-title mt-3 mb-0">IDR 2.579.000
-                        <span class="f-13"> <strike>IDR 5.000.000</strike></span>
-                      </h1>
-                      <p class="text-muted f-15 mt-3">Seperti First Class dengan jumlah 10x
-                        pertemuan, materi
-                        hanya terfokus ke body language, tidak sampai kepada konten pembicaraan
-                      </p>
-                      <div class="mt-4 pt-1">
-                        <p class="mb-3 f-16"><i class='bx bxs-check-circle'></i> Garansi mengulang kelas</p>
-                        <p class="mb-3 f-16"><i class='bx bxs-check-circle'></i> Waktu flexible</p>
-                        <p class="mb-3 f-16"><i class='bx bxs-check-circle'></i> <b>10x pertemuan:</b> hingga selesai
-                        </p>
-                        <p class="mb-3 f-16"><i class='bx bxs-check-circle'></i> Maksimal peserta <b>1-3 orang</b></p>
-                        <p class="mb-3 f-16"><i class='bx bxs-check-circle'></i> Durasi kelas <b>90 menit</b></p>
-                        <p class="mb-3 f-16"><i class='bx bxs-check-circle'></i> Dapat Certificate</p>
-                        <p class="mb-3 f-16"><i class='bx bxs-check-circle'></i> Bisa <b>DP dan Dicicil</b></p>
-                        <p class="mb-3 f-16"><i class='bx bxs-check-circle'></i> Gratis <b>webinar</b> setiap bulan</p>
-                        <p class="mb-3 f-16"><i class='bx bxs-check-circle'></i> Dapat <b>materi</b> setiap minggu</p>
-                      </div>
-                      <div class="mt-4 pt-2 text-center">
-                        <a data-program="First Private : Yogyakarta"
-                          class="btn btn-green w-100 title-change-registration"
-                          onclick="sendWhatsAppMessage(this)">Daftar Sekarang</a>
-                        <a onclick="askAdminMessage(this)" data-program="First Private : Yogyakarta"
-                          class="btn btn-primary w-100 title-change-consultation">Tanya
-                          Admin</a>
-                      </div>
-                    </div>
-                  </div>
-                </div>
               </div>
+              -->
 
-              <!-- First Class : Jakarta, Tangsel atau Surabaya -->
-              <div class="tab-pane custom-price-content fade" id="first-class-jakarta-content" role="tabpanel">
+              <!-- First Class : Tangsel -->
+              <div class="tab-pane custom-price-content fade active show" id="first-class-jakarta-content" role="tabpanel">
                 <div class="row g-0 align-items-center">
                   <div class="col-lg-6">
                     <div class="pricing-box active bg-white rounded mt-4">
@@ -807,7 +729,7 @@
                         <span class="badge">Best Buy</span>
                       </div>
 
-                      <h5 class="fw-normal">First Class : Jakarta, Tangsel & Surabaya</h5>
+                      <h5 class="fw-normal">First Class : Tangsel</h5>
                       <h1 class="pricing-title mt-3 mb-0">IDR 2.579.000
                         <span class="f-13"> <strike>IDR 3.000.000</strike></span>
                       </h1>
@@ -838,19 +760,16 @@
                         </p>
                       </div>
                       <div class="mt-4 pt-2 text-center">
-                        <a data-program="First Class : Jakarta, Tangsel atau Surabaya"
+                        <a data-program="First Class : Tangsel"
                           class="btn btn-green w-100 title-change-registration"
-                          onclick="sendWhatsAppMessage(this)">Daftar Sekarang</a>
-                        <a onclick="askAdminMessage(this)" data-program="First Class : Jakarta, Tangsel atau Surabaya"
-                          class="btn btn-primary w-100 title-change-consultation">Tanya
-                          Admin</a>
+                          onclick="sendWhatsAppMessage(this)">Daftar via WhatsApp</a>
                       </div>
                     </div>
                   </div>
 
                   <div class="col-lg-6">
                     <div class="pricing-box bg-white rounded mt-4">
-                      <h5 class="fw-normal">First Private : Jakarta, Tangsel & Surabaya</h5>
+                      <h5 class="fw-normal">First Private : Tangsel</h5>
                       <h1 class="pricing-title mt-3 mb-0">IDR 3.579.000
                         <span class="f-13"> <strike>IDR 5.000.000</strike></span>
                       </h1>
@@ -871,12 +790,9 @@
                         <p class="mb-3 f-16"><i class='bx bxs-check-circle'></i> Dapat <b>materi</b> setiap minggu</p>
                       </div>
                       <div class="mt-4 pt-2 text-center">
-                        <a data-program="First Private : Jakarta, Tangsel atau Surabaya"
+                        <a data-program="First Private : Tangsel"
                           class="btn btn-green w-100 title-change-registration"
-                          onclick="sendWhatsAppMessage(this)">Daftar Sekarang</a>
-                        <a onclick="askAdminMessage(this)" data-program="First Private : Jakarta, Tangsel atau Surabaya"
-                          class="btn btn-primary w-100 title-change-consultation">Tanya
-                          Admin</a>
+                          onclick="sendWhatsAppMessage(this)">Daftar via WhatsApp</a>
                       </div>
                     </div>
                   </div>
